--- a/QA_Enginer/pom.xml
+++ b/QA_Enginer/pom.xml
@@ -29,6 +29,12 @@
             <version>5.9.3</version>
             <scope>test</scope>
         </dependency>
+
+             <dependency>
+            <groupId>org.seleniumhq.selenium</groupId>
+            <artifactId>selenium-java</artifactId>
+            <version>4.24.0</version>
+        </dependency>
     </dependencies>
 
 </project>
